1.0.4-dev

 * Fix memleaks, bug #14851
 * Small patch for MacPorts by jhohle

1.0.3	2008-06-12

 * Change license from PHP 3.0 to PHP 3.01 for Debian?
 * Added geoip_continent_code_by_name() to get continent instead of country
 * Fixing a small casting issue (compiler warning)
 * Fixing missing entries in geoip_record_by_name, bug #14131

1.0.2	2007-11-20

 * Added geoip_isp_by_name (patch by Yannick Gard)

1.0.1	2007-08-22

 * Added geoip_db_avail() to check for DB availability (file found)
 * Added geoip_db_filename() to get the internal file name of the library
 * Added geoip_db_get_all_info() to fetch all info about all database types
 * Added some tests so that make test can crunch something.
 * Added database file path and name in warning when DB is not found.
 * Added geoip.custom_directory php.ini option to change default path for DBs

1.0.0	2007-08-14

 * Marked as stable
 * Fixing wrong version number inside extension

0.2.0	2006-08-22

 * Initial PECL Release
 * Fixing various memory leaks
 * Registering the C API constants in PHP

0.1.3	2006-7-10

Following changes made by Olivier Hill
	* Missing PHP function prototypes
	* Fixing code foldings in Emacs
	* Outputting E_NOTICES instead of E_WARNING when non fatal errors
	* Return type of longitude/latitude should be DOUBLE and not LONG

0.1.2	2006-5-19
	* Following changes all contributed by Guenter Knauf
- moved argument parsing up at various places before we create a GeoIP.
- moved GeoIP_delete() call at various places up to get it called before we error out.
- fixed one place where a missing return caused a segfault on all platforms because
  RETURN_STRING() was called with NULL when GeoIP lookup failed.
- added php.ini entry parsing; prepared for usage of geoip.database_standard var.
  This works fine so far as you can test with the geoip_database_info() call which uses
  the database configured with the geoip.database_standard var; if not set it defaults